@@ -1,6 +1,7 @@
 from Foundation import NSObject
 from InfoWindowController import InfoWindowController
+from nibwrapper import ToDoAppDelegateBase
 
-class ToDoAppDelegate (NSObject):
+class ToDoAppDelegate (ToDoAppDelegateBase):
 	def showInfo_(self, sender):
 		InfoWindowController.sharedInfoWindowController().showWindow_(sender)
