@@ -12,7 +12,7 @@ icons = [ os.path.join('Icons', fn) for fn in os.listdir('Icons') if fn.lower().
 objc.builder.build_applet(
 	app_name= 'ToDo',
 	main_py = 'main.py',
-	extra_src = [ fn for fn in os.listdir('.') if fn.endswith('.py') and fn != 'main.py' ],
+	extra_src = [ fn for fn in os.listdir('.') if fn.endswith('.py') and fn not in ('main.py', 'setup-app.py') ],
 	info_plist = 'Info.plist',
 	raw=False,
 	extra_files = ['English.lproj' ] + images + icons 
